--- a/translations/values-es/help.xml
+++ b/translations/values-es/help.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="help_map_ctrl">Map control</string>
+    <string name="help_map_ctrl">Configuración</string>
     <string name="text_help_map_ctrl">
-        <b>1</b> Free mode\n
-        <b>2</b> Follow plane\n
-        <b>3</b> Rotation lock\n
-        <b>4</b> Click to reset\n
+        <b>1</b> Modo libre\n
+        <b>2</b> Seguir avión\n
+        <b>3</b> Bloquear giro\n
+        <b>4</b> Pulsa para inicializar\n
     </string>
     
-    <string name="help_prediction">Prediction</string>
+    <string name="help_prediction">Predicción</string>
     <string name="text_help_prediction">
-        Prediction of plane position (based on current speed and direction) in 10,30 and 90 seconds
+        Predicción de la posición del avión (basada en la velocidad y dirección actuales) en 10, 30 y 90 segundos
     </string>
     
-    <string name="faq">FAQ (Frequently asked questions)</string>
+    <string name="faq">FAQ (Frequently Asked Questions)</string>
     
-    <string name="faq_connection">Connection</string>
+    <string name="faq_connection">Conexión</string>
     <string name="text_faq_con">
-        <b>How do I connect?</b>\n
-         \u00A0\u00A0 The app needs an IP address of your computer running War Thunder, how to get your IP see http://ip.junkcode.net \n\n
+        <b>¿Cómo me conecto?</b>\n
+         \u00A0\u00A0 La App necesita la dirección IP del ordenador que ejecuta War Thunder. Para obtener tu IP consulta http://ip.junkcode.net \n\n
          
-        <b>I did enter IP and it still says \"No connection\"</b>\n
-         \u00A0\u00A0 There might be problem with your local network routing see http://ip.junkcode.net/help \n\n
+        <b>He introducido la IP pero aún indica \"Sin conexión\"</b>\n
+         \u00A0\u00A0 Podría haber un problema con tu red local. Consulta http://ip.junkcode.net/help \n\n
          
-        <b>It still doesn\'t connect!</b>\n
-         \u00A0\u00A0 You didn\'t read http://ip.junkcode.net/help, did you?
+        <b>Aún no conecta!</b>\n
+         \u00A0\u00A0 No has consutado http://ip.junkcode.net/help, a que no?
          \n
     </string>
     
     <string name="faq_extras">Extras</string>
     <string name="text_faq_extra">   
-        <b>I donated, where is my code?</b>\n
-         \u00A0\u00A0 You should receive code to your email within few minutes after donation, if not contact support@junkcode.net \n\n
+        <b>He realizado una donación, ¿dónde está mi código?</b>\n
+         \u00A0\u00A0 Deberías recibirlo en tu correo unos minutos después de la donación.  Si no es así, contacta support@junkcode.net \n\n
          
-        <b>I entered code but nothing is unlocked</b>\n
-         \u00A0\u00A0 Try restarting the app \n\n
+        <b>He introducido el código per no se ha desbloqueado nada</b>\n
+         \u00A0\u00A0 Prueba reiniciando la App \n\n
         
     </string>
-    <string name="faq_improvement">App improvement</string>
+    <string name="faq_improvement">Mejoras de la App</string>
     <string name="text_faq_improve">"  
-        <b>I don\'t like something</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>No me gusta algo</b>\n
+         \u00A0\u00A0 Coméntanoslo en - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I found a bug</b>\n
-         \u00A0\u00A0 Post it here http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
+        <b>He encontrado un fallo</b>\n
+         \u00A0\u00A0 Inclúyelo aquí, http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
-        <b>I have idea for new feature</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Tengo una idea para una nueva funcionalidad</b>\n
+         \u00A0\u00A0 Coméntanoslo en - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I want to help with translation/icons/...</b>\n
-         \u00A0\u00A0 Some of the resources are already here http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Quiero ayuda con la traducción/iconos/...</b>\n
+         \u00A0\u00A0 Algunos de los recursos están disponibles en http://github.com/JunkCode/wtTactMap Puedes proponer modificaciones o añadir nuevos. Si tienes preguntas o ideas coméntanoslas aquí - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
     </string>
     
