--- a/translations/values-cs/strings.xml
+++ b/translations/values-cs/strings.xml
@@ -144,5 +144,7 @@
     
     <string name="help_title">Nápověda &amp; FAQ</string>
     
+    <string name="blink">Povolit blikání</string>
+    
 </resources>
 
