--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -144,4 +144,6 @@
     
     <string name="help_title">Hilfe &amp; FAQ</string>
     
+    <string name="blink">Allow flashing</string>
+    
 </resources>
