--- a/translations/values-pt/strings.xml
+++ b/translations/values-pt/strings.xml
@@ -144,5 +144,7 @@
     
     <string name="help_title">Ajuda &amp; FAQ</string>
     
+    <string name="blink">Allow flashing</string>
+    
     
 </resources>
