--- a/translations/values-hu/strings.xml
+++ b/translations/values-hu/strings.xml
@@ -144,4 +144,6 @@
     
     <string name="help_title">Segítség &amp; GYIK</string>
     
+    <string name="blink">Allow flashing</string>
+    
 </resources>
