--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -144,4 +144,6 @@
     
     <string name="help_title">Помощь &amp; ЧаВо</string>
     
+    <string name="blink">Allow flashing</string>
+    
 </resources>
