--- a/translations/values-uk/strings.xml
+++ b/translations/values-uk/strings.xml
@@ -144,4 +144,5 @@
     
     <string name="help_title">Довідка &amp; FAQ</string>
     
+    <string name="blink">Allow flashing</string>
 </resources>
