--- a/translations/values-nl/strings.xml
+++ b/translations/values-nl/strings.xml
@@ -143,5 +143,7 @@
     <string name="pref_header_GUI">GUI</string>
     
     <string name="help_title">Help &amp; FAQ</string>
-     
+         
+    <string name="blink">Allow flashing</string>
+    
 </resources>
