Small fix help.xml
added just a missing letter (line 37)

--- a/translations/values-es/help.xml
+++ b/translations/values-es/help.xml
@@ -34,7 +34,7 @@
         <b>He realizado una donación, ¿dónde está mi código?</b>\n
          \u00A0\u00A0 Deberías recibirlo en tu correo unos minutos después de la donación.  Si no es así, contacta support@junkcode.net \n\n
          
-        <b>He introducido el código per no se ha desbloqueado nada</b>\n
+        <b>He introducido el código pero no se ha desbloqueado nada</b>\n
          \u00A0\u00A0 Prueba reiniciando la App \n\n
         
     </string>
