--- a/translations/values-es/strings.xml
+++ b/translations/values-es/strings.xml
@@ -90,7 +90,7 @@
     <string name="hide_gp_login">Ocultar botón login G+</string>
     
     <string name="fullscreen">Pantalla completa</string>
-    <string name="connect">Connectar con amigos</string>
+    <string name="connect">Conectar con amigos</string>
     
     <string name="waypoint">Waypoint</string>
     <string name="waypoint_ctrl">Ajustes de Waypoints</string>
