--- a/translations/values-pl/strings.xml
+++ b/translations/values-pl/strings.xml
@@ -145,5 +145,6 @@
     <string name="help_title">Pomoc &amp; FAQ</string>
     
     <string name="blink">Allow flashing</string>
-    
+    <string name="offline_mode">Offline mode</string>
+
 </resources>
