--- a/translations/values-sv/strings.xml
+++ b/translations/values-sv/strings.xml
@@ -145,5 +145,6 @@
     <string name="help_title">Hjälp &amp; Vanliga frågor</string>
     
     <string name="blink">Tillåt blinkande</string>
-     
+    <string name="offline_mode">Offline mode</string>
+
 </resources>
