--- a/translations/values-es/strings.xml
+++ b/translations/values-es/strings.xml
@@ -145,5 +145,6 @@
     <string name="help_title">Ayuda &amp; FAQ</string>
     
     <string name="blink">Permitir parpadeo</string>
-    
+    <string name="offline_mode">Offline mode</string>
+
 </resources>
