--- a/translations/values-nl/strings.xml
+++ b/translations/values-nl/strings.xml
@@ -143,7 +143,8 @@
     <string name="pref_header_GUI">GUI</string>
     
     <string name="help_title">Help &amp; FAQ</string>
-         
+
     <string name="blink">Allow flashing</string>
-    
+    <string name="offline_mode">Offline mode</string>
+
 </resources>
