--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -145,5 +145,6 @@
     <string name="help_title">Помощь &amp; ЧаВо</string>
     
     <string name="blink">Allow flashing</string>
-    
+    <string name="offline_mode">Offline mode</string>
+
 </resources>
