--- a/translations/values-uk/strings.xml
+++ b/translations/values-uk/strings.xml
@@ -145,4 +145,5 @@
     <string name="help_title">Довідка &amp; FAQ</string>
     
     <string name="blink">Allow flashing</string>
+    <string name="offline_mode">Offline mode</string>
 </resources>
