--- a/translations/values-cs/strings.xml
+++ b/translations/values-cs/strings.xml
@@ -146,6 +146,18 @@
     
     <string name="blink">Povolit blikání</string>
     <string name="offline_mode">Offline mód</string>
+    <string name="talk_back">Hlášky</string>
+    <string name="kills">Zabití</string>
+    <string name="trigger_words_kill">Klíčová slova zabití</string>
+    <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
+    <string name="trigger_words_kill_summary">Původní hodnoty: \"destroyed,shot down,zničen\"</string>
+    <string name="burns">Zapálení</string>
+    <string name="trigger_words_burn">Klíčová slova zapálení</string>
+    <string name="trigger_words_burn_default">set afire,zapálen</string>
+    <string name="trigger_words_burn_summary">Původní hodnoty: \"set afire,zapálen\"</string>
+    <string name="player_name">Herní nick</string>
+    <string name="ext_unlocked">Extra funkce odemčeny</string>
+    <string name="please_restart">Prosím, restartujte aplikaci aby nové nastavení začalo platit.</string>
 
 </resources>
 
