--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -146,5 +146,17 @@
     
     <string name="blink">Allow flashing</string>
     <string name="offline_mode">Offline mode</string>
+    <string name="talk_back">Talk back</string>
+    <string name="kills">Kills</string>
+    <string name="trigger_words_kill">Kill trigger words</string>
+    <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
+    <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
+    <string name="burns">Burns</string>
+    <string name="trigger_words_burn">Burn trigger words</string>
+    <string name="trigger_words_burn_default">set afire,подожжён</string>
+    <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
+    <string name="player_name">Ingame name</string>
+    <string name="ext_unlocked">Extras unlocked</string>
+    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
 
 </resources>
