--- a/translations/values-fr/strings.xml
+++ b/translations/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">WarThunder Carte Tactique</string>
+    <string name="app_name">Carte Tactique WarThunder</string>
     
     <string name="settings">Paramètres</string>
     <string name="hide">Cacher</string>
@@ -10,102 +10,102 @@
     <string name="proximity_wrn">Rayon :</string>
     
     
-    <string name="more">Plus de paramètres ore settings</string>
+    <string name="more">Autres Paramètres</string>
     <string name="connerror">Aucune connexion</string>
     
     <string name="gui">Paramètres GUI</string>
-    <string name="screenon">Garder sur mon</string>
-    <string name="counters">Comptoirs</string>
+    <string name="screenon">Empêcher la mise en veille</string>
+    <string name="counters">Compteurs</string>
     
-    <string name="ip_h">Adresse d\'IP</string>
-    <string name="find_ip">Trouvez IP juste</string>
-    <string name="set_ip">Faites IP</string>
-    <string name="ip">IP d\'ordinateur avec WarThunder (sans port) :</string>
+    <string name="ip_h">Adresse IP</string>
+    <string name="find_ip">Scanner la bonne IP</string>
+    <string name="set_ip">Entrer IP</string>
+    <string name="ip">IP de l\'ordinateur avec WarThunder (sans port) :</string>
     
     
-    <string name="zoom_btns">Boutons de zoom</string>
-    <string name="donate">Faites une Donation</string>
+    <string name="zoom_btns">Boutons de Zoom</string>
+    <string name="donate">Faites un Don</string>
     <string name="enemy_vehicles">Véhicules ennemis</string>
-    <string name="friendly_vehicles">Véhicules conviviale</string>
-    <string name="friendly_structures">Structures conviviale</string>
-    <string name="enemy_structures">Structures ennemis</string>
+    <string name="friendly_vehicles">Véhicules amis</string>
+    <string name="friendly_structures">Structures amies</string>
+    <string name="enemy_structures">Structures ennemies</string>
     
-    <string name="updates_speed">Fréquence de mises à jour</string>
+    <string name="updates_speed">Fréquence de mise à jour</string>
     <string name="how_ip">"Comment obtenir une adresse IP voir : http://ip.junkcode.net/help"</string>
     <string name="how_ip_der">"Si vous ne savez pas comment obtenir votre adresse IP cliquez ici"</string>
-    <string name="ip_err">Adresse IP non valide</string>
-    <string name="ip_err_wrong">"Entrée d\'adresse au format XXX.XXX.XXX.XXX, cliquez sur aide pour le guide pour obtenir la bonne."</string>
-    <string name="ip_err_local">"127.0.0.1 n\'est pas l\'adresse juste. \r\n Cliquent sur l\'Aide pour le guide pour recevoir juste."</string>
+    <string name="ip_err">Adresse IP pas valide</string>
+    <string name="ip_err_wrong">"Entrée l\'adresse au format XXX.XXX.XXX.XXX, cliquez sur aide pour le guide pour obtenir la bonne."</string>
+    <string name="ip_err_local">"127.0.0.1 n\'est pas la bonne adresse. \r\n Cliquez sur l\'Aide pour le guide trouver la bonne."</string>
     <string-array name="updates_speed_array">
-        <item >Très Vite</item>
-        <item >Vite</item>
+        <item >Très Rapide</item>
+        <item >Rapide</item>
         <item >Moyen</item>
-        <item >un peu lent</item>
-        <item >lentment</item>
-        <item >très lente</item>
-        <item >5 secondes</item>
+        <item >Assez Lent</item>
+        <item >Lent</item>
+        <item >Très Lent</item>
+        <item >5 sec</item>
     </string-array>
 
      <string name="info_title">Informations</string>
     <string name="info_msg">
-        "Cette application non officielle est fait par des fans de Warthunder!\r\n"
-        "Cette application est encore en version bêta, mais n\'hésitez pas à nous contacter avec des bugs ou de nouvelles idées à:\r\n"
+        "Ceci est une application non officielle, faite par des fans de Warthunder !\r\n"
+        "Cette application est encore en version bêta, mais n\'hésitez pas à nous contacter avec des bugs ou de nouvelles idées à :\r\n"
         "http://junkcode.net/forum \r\n"
         "\r\n"
-        "Nous recherchons des personnes pour traduire cette application, si vous voulez aider à voir http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
+        "Nous cherchons des personnes pour traduire cette application, si vous voulez aider allez à http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
     </string>
     <string name="donate_line">  
-        "Aimez-vous cette application? Dites-le avec une donation sur http://junkcode.net for future development. \r\n"
+        "Vous aimez cette application ? Dites-le avec un don sur http://junkcode.net for future development. \r\n"
         </string>
      <string name="info_update_title">Nouvelles de mise à jour</string>
      
-    <string name="version">Version de l\'App:</string>
+    <string name="version">Version de l\'Appli:</string>
     <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="ignore">Annuler</string>
-    <string name="help">Aider</string>
+    <string name="cancel">Annuler</string>
+    <string name="ignore">Ignorerr</string>
+    <string name="help">Aide</string>
     <string name="pref_header_notifications">Notifications</string>
 
     <string name="pref_title_ringtone">Sonnerie</string>
-    <string name="pref_header_data_sync">Connexion d\'ordinateur</string>
+    <string name="pref_header_data_sync">Connexion PC</string>
     <string name="pref_ringtone_silent">Silencieux</string>
     
-    <string name="nowificonnected">Vous devez connecter à votre local WiFi</string>
+    <string name="nowificonnected">Vous devez vous connecter à votre Wifi local</string>
 
-    <string name="planeicons">Icônes d\'avion</string>
+    <string name="planeicons">Icônes des avion</string>
     <string-array name="planes_icon_size">
         <item >Gros</item>
         <item >Moyen</item>
         <item >Petit</item>
-        <item >Tres petit</item>
+        <item >Très petit</item>
     </string-array>
     
     <string name="lines">Lignes de navigation</string>
-    <string name="lines_oos">Seulement à des cibles hors écran</string>
+    <string name="lines_oos">Seulement pour les cibles hors écran</string>
     <string name="lines_enemy">Ennemis</string>
-    <string name="lines_friendly">Amicales</string>
+    <string name="lines_friendly">Amis</string>
     <string name="lines_squad">Escouade</string>
     <string name="lines_target">Cible</string>
     
-    <string name="hide_gp_login">Masquer G+ bouton Connexion</string>
+    <string name="hide_gp_login">Masquer bouton de connexion G+</string>
     
     <string name="fullscreen">Plein écran</string>
     <string name="connect">Connectez-vous à vos amis</string>
     
-    <string name="waypoint">point de route</string>
-    <string name="waypoint_ctrl">contrôles point de route</string>
+    <string name="waypoint">Étapes</string>
+    <string name="waypoint_ctrl">Contrôles des étapes</string>
     <string name="add">Ajouter</string>
     
-    <string name="horizontal_distance">SMontrez distance horizontale</string>
+    <string name="horizontal_distance">Montrez distance horizontale</string>
     
-    <string name="pref_header_extras">Supplémentaire</string>
+    <string name="pref_header_extras">Suppléments</string>
     <string name="prediction">Prédiction</string>
-    <string name="self">Soi</string>
-    <string name="show_intro_screen">Voir introduction démarrage</string>
+    <string name="self">Moi</string>
+    <string name="show_intro_screen">Voir écran de démarrage</string>
     
-    <string name="ext_unlock">Débloquez suppléments</string>
+    <string name="ext_unlock">Débloquer suppléments</string>
     <string name="ext_unlock_det">
-        "Les suppléments sont débloqués par la donation <b><i>n\'importe quel</i></b> la quantité ou par le contenu contribution\r\n((Si vous avez donné plus tôt et n\'a pas d\'obtenir le code encore Envoyez-nous un courriel email))"</string>
+        "Les suppléments sont débloqués par le don de <b><i>n\'importe quelle</i></b> somme ou par la contribution au contenu\r\n((Si vous avez déjà donné et n\'avez pas encore obtenu le code, envoyez-nous un email))"</string>
     <string name="ext_unlock_dial">"Unlock Code:"</string>
     
     <string name="ext_link">Lien vers compte G+</string>
@@ -115,24 +115,24 @@
     
     <string name="map">Carte:</string>
     <string name="custom_maps">Cartes personnalisées</string>
-    <string name="custom_maps_url">Cartes personnalisées url</string>
-    <string name="see_forum">Pour plus de détails voir le forum de JunkCode</string>
+    <string name="custom_maps_url">URL Cartes personnalisées</string>
+    <string name="see_forum">Pour plus de détails voir le forum JunkCode</string>
     
     <string name="tankicons">Icônes de char</string>
     <string name="groundicons">Icônes de terrain</string>
     
-    <string name="share_position">Partager poste</string>
+    <string name="share_position">Partager position</string>
     <string name="death_markers">Laissez crânes sur la mort</string>
 
     <string name="size">Taille</string>
-    <string name="style">Style de</string>
+    <string name="style">Style</string>
     <string-array name="style_types">
         <item >Vieux</item>
-        <item >Nouveau</item>
+        <item >Nouveaux</item>
     </string-array>
     
     <string-array name="color_schemes">
-        <item>Default</item>
+        <item>Défaut</item>
         <item>Vert/Orange</item>
         <item>Vert/Rouge</item>
     </string-array>
@@ -143,25 +143,25 @@
     
     <string name="help_title">Aide &amp; FAQ</string>
 
-    <string name="blink">Allow flashing</string>
-    <string name="offline_mode">Offline mode</string>
+    <string name="blink">Autoriser clignotement</string>
+    <string name="offline_mode">Mode hors connexion</string>
     <string name="talk_back">Talk back</string>
     <string name="kills">Kills</string>
-    <string name="trigger_words_kill">Kill trigger words</string>
-    <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
-    <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
-    <string name="burns">Burns</string>
-    <string name="trigger_words_burn">Burn trigger words</string>
-    <string name="trigger_words_burn_default">set afire,подожжён</string>
-    <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
-    <string name="player_name">Ingame name</string>
-    <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
-    <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
-    <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
+    <string name="trigger_words_kill">Mots de déclenchement Kill</string>
+    <string name="trigger_words_kill_default">détruit, abattu,уничтожен</string>
+    <string name="trigger_words_kill_summary">Valeur par défaut: \"détruit, abattu,уничтожен\"</string>
+    <string name="burns">Enflamé</string>
+    <string name="trigger_words_burn">Mots de déclenchement Enflamé</string>
+    <string name="trigger_words_burn_default">Enflamé, mis en feu,подожжён</string>
+    <string name="trigger_words_burn_summary">Valeur par défaut: \"Enflamé,mis en feuподожжён\"</string>
+    <string name="player_name">Pseudo dans le jeu</string>
+    <string name="ext_unlocked">Suppléments débloqués</string>
+    <string name="please_restart">Redémarrer l'appli pour que les nouveaux réglages prennent effet.</string>
+    <string name="planes_in_tank">Détecter les chars en jeu de tank</string>
+    <string name="bomber_path">Trajectoires des Bombardiers</string>
+    <string name="air_raid_siren">Sirêne de Raid Aérien</string>
+    <string name="pointicons">Icones de Pointage</string>
+    <string name="base_approx_time_remaining">Montrer le temps estimé pour la capture de base</string>
+    <string name="base_progress_beeping">Bipper quand la base est presque capturée</string>
 
 </resources>
